# agent-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  control-plane-integration.md
examples/: e2e_validation.py
src/agent_intelligence/: __init__.py  runner.py
src/agent_intelligence/agents/: __init__.py
src/agent_intelligence/agents/chat/: __init__.py  chat.yaml  prompt.md
src/agent_intelligence/agents/citation_resolver/: __init__.py  agent.py  citation_resolver.yaml  config.yaml  prompt.md  schemas.py
src/agent_intelligence/agents/citation_resolver/prompts/: main.md  semantic_check.md
src/agent_intelligence/agents/hypothesis_tester/: __init__.py  hypothesis_tester.yaml  prompt.md
src/agent_intelligence/agents/persona_simulator/: __init__.py  agent.py  config.yaml  persona_simulator.yaml  prompt.md  schemas.py
src/agent_intelligence/agents/persona_simulator/prompts/: main.md
src/agent_intelligence/cli/: __init__.py  main.py
src/agent_intelligence/core/: __init__.py  agent.py  config.py  context.py  errors.py
src/agent_intelligence/mcp/: __init__.py  server.py
src/agent_intelligence/observability/: __init__.py  budget.py  otel.py  receipts.py
src/agent_intelligence/providers/: __init__.py  anthropic.py  base.py  discovery.py  litellm.py  mock.py  ollama.py  openai.py
src/agent_intelligence/react/: __init__.py  loop.py  parser.py  runner.py
src/agent_intelligence/registry/: __init__.py  registry.py
src/agent_intelligence/tools/: __init__.py  base.py  registry.py
src/agent_intelligence/tools/builtins/: __init__.py  _llm.py  citation.py  http.py  lookup.py  persona.py  synthesize.py  verify.py
src/agent_intelligence/tools/sources/: __init__.py  base.py  builtin.py  mcp_source.py  registry.py  skillhub.py
src/agent_intelligence/tracing/: __init__.py  events.py
tests/: conftest.py
tests/agents/: test_citation_resolver.py  test_persona_simulator.py
tests/core/: test_budget.py  test_config.py  test_receipts.py
