[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-intelligence"
version = "0.2.0"
description = "Agentic framework where the LLM owns decisions: ReAct loop + tool registry + YAML agents. Inspired by NVIDIA NeMo Agent Toolkit; engineered for letsbe10x."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "letsbe10x", email = "noreply@cogsmith.ai" }]
keywords = [
  "agentic",
  "llm",
  "multi-model",
  "configurable",
  "receipt",
  "pvr",
  "letsbe10x",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "click>=8.1",
  "rich>=13.7",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
litellm = ["litellm>=1.40"]
mcp = ["mcp>=0.9"]
all = [
  "anthropic>=0.40",
  "openai>=1.40",
  "litellm>=1.40",
  "mcp>=0.9",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
ai-cli = "agent_intelligence.cli.main:main"

[project.entry-points."agent_intelligence.providers"]
anthropic = "agent_intelligence.providers.anthropic:AnthropicProvider"
openai = "agent_intelligence.providers.openai:OpenAIProvider"
litellm = "agent_intelligence.providers.litellm:LiteLLMProvider"
ollama = "agent_intelligence.providers.ollama:OllamaProvider"
mock = "agent_intelligence.providers.mock:MockProvider"

[project.entry-points."agent_intelligence.tool_sources"]
builtin = "agent_intelligence.tools.sources.builtin:BuiltinToolSource"
skillhub = "agent_intelligence.tools.sources.skillhub:SkillHubToolSource"
mcp = "agent_intelligence.tools.sources.mcp_source:MCPToolSource"

[project.entry-points."agent_intelligence.tools"]
http_get = "agent_intelligence.tools.builtins.http:http_get"
persona_generate = "agent_intelligence.tools.builtins.persona:persona_generate"
persona_evaluate_diversity = "agent_intelligence.tools.builtins.persona:persona_evaluate_diversity"
synthesize_extract_themes = "agent_intelligence.tools.builtins.synthesize:synthesize_extract_themes"
synthesize_finalize_validation = "agent_intelligence.tools.builtins.synthesize:synthesize_finalize_validation"
lookup_id = "agent_intelligence.tools.builtins.lookup:lookup_id"
verify_semantic = "agent_intelligence.tools.builtins.verify:verify_semantic"
citation_finalize = "agent_intelligence.tools.builtins.citation:citation_finalize"

[project.urls]
Homepage = "https://github.com/letsbe10x/agent-intelligence"
Source = "https://github.com/letsbe10x/agent-intelligence"
Issues = "https://github.com/letsbe10x/agent-intelligence/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_intelligence"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
  "E501",   # long docstrings/pricing tables are fine; tests/fixtures often have long literals
  "B008",   # FastAPI-style Depends() and Field(default=...) at function defaults are intentional
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
